feat: improve API structure and docs

--- a/tmpl/authorized.html
+++ b/tmpl/authorized.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Authenticated - EVE Buddy</title>
+      <title>Authorized - EVE Buddy</title>
       <link rel="icon" href="https://cdn.jsdelivr.net/gh/ErikKalkoken/evebuddy@master/resources/sso/favicon.ico" type="image/x-icon">
       <link href="https://cdn.jsdelivr.net/gh/ErikKalkoken/evebuddy@master/resources/sso/styles.css" rel="stylesheet" />
    </head>
@@ -15,12 +15,12 @@
          <main role="main">
             <div class="page-content">
                <div class="main-content-container">
-                  <h1 class="title">Authentication successful</h1>
+                  <h1 class="title">Authorization Complete</h1>
                   <div class="character">
                      <img src="https://image.eveonline.com/Character/{{.ID}}_128.jpg" />
                      <h2>{{.Name}}</h2>
                   </div>
-                  <p>Your character has been authenticated successfully for <strong>EVE Buddy</strong>.</p>
+                  <p><strong>EVE Buddy</strong> has been authorized for your character.</p>
                   <p>You can now close this tab and return to the app.</p>
                </div>
             </div>
