fix: static assets missing when rendering authorized page

--- a/tmpl/authorized.html
+++ b/tmpl/authorized.html
@@ -4,13 +4,13 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Authorized - EVE Buddy</title>
-      <link rel="icon" href="https://cdn.jsdelivr.net/gh/ErikKalkoken/evebuddy@master/resources/sso/favicon.ico" type="image/x-icon">
-      <link href="https://cdn.jsdelivr.net/gh/ErikKalkoken/evebuddy@master/resources/sso/styles.css" rel="stylesheet" />
+      <link rel="icon" href="https://cdn.jsdelivr.net/gh/ErikKalkoken/eveauth@master/public/favicon.ico" type="image/x-icon">
+      <link href="https://cdn.jsdelivr.net/gh/ErikKalkoken/eveauth@master/public/styles.css" rel="stylesheet" />
    </head>
-   <body id="loginbody" class="en  " data-page="character-selection" style="background-image: url(https://cdn.jsdelivr.net/gh/ErikKalkoken/evebuddy@master/resources/sso/sso_bg_opt.jpg);">
+   <body id="loginbody" class="en  " data-page="character-selection" style="background-image: url(https://cdn.jsdelivr.net/gh/ErikKalkoken/eveauth@master/public/sso_bg_opt.jpg);">
       <div class="body-content">
          <header>
-            <img src="https://cdn.jsdelivr.net/gh/ErikKalkoken/evebuddy@master/resources/sso/eve-logo.svg" alt="EVE Online logo" class="logo"/>
+            <img src="https://cdn.jsdelivr.net/gh/ErikKalkoken/eveauth@master/public/eve-logo.svg" alt="EVE Online logo" class="logo"/>
          </header>
          <main role="main">
             <div class="page-content">
